--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li class="link"><a href="#">Explore</a></li>
         <li class="link"><a href="#foot">Contact Us</a></li>
       </ul>
-      <a href="#foot"><button class="btn">Join on Discord</button></a>
+      <a href="#foot"><button class="btn">Join our Discord</button></a>
     </nav>
     <header>
       <div class="section__container header__container">
@@ -56,7 +56,7 @@
         <div>
           <h2 class="section__title">Speakers & Talks</h2>
           <p class="section__subtitle">
-          There are many brilliant speakers who wil join us at this event to share their experience and knowledge over Keras.         
+          Many brilliant speakers will be joining us to share their experiences and knowledge over Keras.         
           </p>
         </div>
         <div class="Speaker__nav">
@@ -68,9 +68,9 @@
         <div class="Speaker__card">
           <img src="asset/Speaker-M(1).png" alt="Speaker" />
           <div class="Speaker__details">
-            <p class="Speaker__title">Anounced Soon</p>
+            <p class="Speaker__title">To Be Announced</p>
             <p class="Speaker__subtitle">Going to give a talk on</p>
-            <p class="Speaker__subtitle">Available Soon</p>
+            <p class="Speaker__subtitle">To Be Announced </p>
           </div>
         </div>
         <div class="Speaker__card">
